@@ -5,6 +5,8 @@ This file documents user visible changes between versions of StumpWM
 * Changes since 0.0.6
 These changes are probably incomplete
 
+** added new rat focus models
+
 ** Xinerama support
 
 ** support hidden groups
